# orbs

./: .gitignore  CMakeLists.txt  Makefile  README.md
cfg/: complex.cfg  default.cfg
cmake/: AddOrbsUnitTest.cmake  FindArgp.cmake
doc/: view_desc.txt
inc/: .list.h.swp  .map.h.swp  .orb.h.swp  config.h  list.h  map.h  orb.h
orbs/: CMakeLists.txt
orbs/inc/: config.h  config_reader.h  defines.h  list.h  map.h  mm.h  orb.h  orb_instr.h  shell.h  stats.h
orbs/src/: config.c  config_reader.c  list.c  main.c  map.c  mm.c  orb.c  shell.c  stats.c
scripts/: plotstats.py
src/: .list.c.swp  .main.c.swp  .map.c.swp  .orb.c.swp  config.c  list.c  main.c  map.c  mm.c  orb.c  shell.c  stats.c
test/: CMakeLists.txt  orb_test.c  test.h  test.hpp  test_config.cpp  test_list.cpp  test_mm.cpp  test_orb.cpp  test_orb_instr.cpp
